--- a/templates/server_create.html
+++ b/templates/server_create.html
@@ -26,6 +26,7 @@
                 <option>Docker</option>
                 <option>Supervisor</option>
                 <option>Jenkins</option>
+                <option>File</option>
               </select>
               </br>
               <p><strong>Port </strong> </strong><span class="fa fa-asterisk"></span></p>
@@ -48,6 +49,9 @@
               </br>
               <p><strong>API Protocal </strong></p>
               <input type="text" name="protocal_api" class="form-control">
+              </br>
+              <p><strong>File Path Root </strong></p>
+              <input type="text" name="file_path_root" class="form-control">
               </br>
               <p><strong>Description </strong></p>
               <input type="text" name="description" class="form-control">
