--- a/templates/side_bar.html
+++ b/templates/side_bar.html
@@ -20,7 +20,7 @@
     </a>
     <ul class="nav panel-collapse collapse" id="collapse-ops-manage">
       <li ><a id="nav-job_list" style="text-align: right;" href="/jenkins/job_list">Job List</a></li>
-      <li ><a id="nav-directory_list" style="text-align: right;" href="/filemanager/directory_list">File Manager</a></li>
+      <li ><a id="nav-file_server_list" style="text-align: right;" href="/filemanager/file_server_list">File Manager</a></li>
     </ul>
   </li>
 
