添加主机和端口过滤

--- a/templates/file_server_list.html
+++ b/templates/file_server_list.html
@@ -15,7 +15,7 @@
 
 <table class="table table-hover">
 <caption>
-<form class="form-inline" style="float: right;" action="/server/file_server" method="post">
+<form class="form-inline" style="float: right;" action="/filemanager/file_server_list" method="post">
  {% csrf_token %}
   <div class="form-group">
     <p class="form-control-static">
