目录浏览添加计数

--- a/templates/directory_list.html
+++ b/templates/directory_list.html
@@ -44,7 +44,7 @@
     </caption>
     <tr>
         <td colspan="12" data-column="0">
-            <span class="table_count">Displaying {{ dir_infos_count }} items <code style="font-size: 13px;">Path: {{path}}</span>
+            <span class="table_count">Displaying {{ file_list_count }} items <code style="font-size: 13px;">Path: {{path}}</span>
         </td>
     </tr>
     <tr class="active">
@@ -120,7 +120,7 @@
     {% endfor %}
     <tr>
         <td colspan="12" data-column="0">
-            <span class="table_count">Displaying {{ dir_infos_count }} items</span>
+            <span class="table_count">Displaying {{ file_list_count }} items</span>
         </td>
     </tr>
 </table>
