--- a/templates/server_update.html
+++ b/templates/server_update.html
@@ -47,6 +47,9 @@
               <p><strong>API Protocal </strong></p>
               <input type="text" name="protocal_api" class="form-control" value={{server.protocal_api}}>
               </br>
+              <p><strong>File Path Root </strong></p>
+              <input type="text" name="file_path_root" class="form-control" value={{server.file_path_root}}>
+              </br>
               <p><strong>Description </strong></p>
               <input type="text" name="description" class="form-control" value="{{server.description}}">
               </br>
