--- a/templates/user_list.html
+++ b/templates/user_list.html
@@ -107,7 +107,7 @@ var all=document.getElementById('check_all');//获取到点击全选的那个复
 var one=document.getElementsByName('check_item');//获取到复选框的名称
 //因为获得的是数组，所以要循环 为每一个checked赋值
 for(var i=0;i<one.length;i++){
-one[i].checked=all.checked; //直接赋值不就行了嘛
+one[i].checked=all.checked; //直接赋值
 }
 }
 </script>
