replace staticfiles with static({% load staticfiles %} and {% load adminstatic %} were deprecated in Django 2.1, and removed in Django 3.0.)

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>mmanager</title>
-    {% load staticfiles %}
+    {% load static %}
     <link   href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
     <link   href="{% static 'css/font-awesome.min.css' %}" rel="stylesheet">
     <link   href="{% static 'css/toastr.min.css' %}" rel="stylesheet">
