--- a/templates/tail_log.html
+++ b/templates/tail_log.html
@@ -20,7 +20,7 @@ $(function () {
             }
             /*创建socket连接*/
             var schema = window.location.protocol=='https:' ? 'wss:' : 'ws:';
-            var wsurl=schema+"//"+window.location.host+window.location.pathname+window.location.search
+            var wsurl=schema+"//"+window.location.host+"/ws"+window.location.pathname+window.location.search
             var socket = new WebSocket(wsurl);
             socket.onopen = function () {
                 console.log('WebSocket open');//成功连接上Websocket
