使用channels替换dwebsocket，支持最新django3.1.4

--- a/templates/container_console.html
+++ b/templates/container_console.html
@@ -13,7 +13,7 @@
 
 <script>
   var schema = window.location.protocol=='https:' ? 'wss:' : 'ws:';
-  var wsurl=schema+"//"+window.location.host+window.location.pathname+window.location.search
+  var wsurl=schema+"//"+window.location.host+"/ws"+window.location.pathname+window.location.search
   var socket = new WebSocket(wsurl);
 
   socket.onopen = function () {
