--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>mmanager</title>
+    <title>豸信CA运维管理系统</title>
     {% load static %}
     <link   href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
     <link   href="{% static 'css/font-awesome.min.css' %}" rel="stylesheet">
@@ -49,7 +49,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                   </button>
-                  <a class="navbar-brand" href="#">mmanager</a>
+                  <a class="navbar-brand" href="#">豸信CA运维管理系统</a>
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
