--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>mmanager</title>
+    <title>豸信CA运维管理系统</title>
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
     <script src="/static/js/jquery.min.js"></script>
     <script src="/static/js/bootstrap.min.js"></script>
@@ -20,7 +20,7 @@
 </head>
 
 <div class="panel panel-default col-center-block">
-  <div class="panel-heading"><span>mmanager</span></div>
+  <div class="panel-heading"><span>豸信CA运维管理系统</span></div>
   <div class="panel-body">
     <form class="form-horizontal" role="form" action='/account/login' method="post">
         {% csrf_token %}
@@ -28,19 +28,19 @@
           <div class="row myCenter">
             <div class="col-xs-6 col-md-4">
               <form class="form-signin">
-                <h2 class="form-signin-heading">Login to mmanager</h2>
+                <h2 class="form-signin-heading"> 登录系统</h2>
                 </br>
-                <p>Username</p>
+                <p>用户名</p>
                 <input type="text" name="username" class="form-control" placeholder="" required autofocus>
                 </br>
-                <p>Password</p>
+                <p>密码</p>
                 <input type="password" name="password" class="form-control" placeholder="" required>
                 </br>
                 <div class="checkbox">
-                  <label><input type="checkbox" value="remember-me">Remember me</label>
+                  <label><input type="checkbox" value="remember-me">记住我</label>
                 </div>
                 </br>
-                <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
+                <button class="btn btn-lg btn-primary btn-block" type="submit">登陆</button>
                 </br>
                 {% if message %}
                     <div class="alert alert-warning">{{ message }}</div>
