--- a/templates/base.html
+++ b/templates/base.html
@@ -97,7 +97,7 @@
 <div class="container"> 
 <hr>
 <p style="text-align: center; font-size: 13px;">
-© 2018 mmanager
+© 豸信CA运维管理系统
 </p> 
 </div>
 </footer>
